# phoronix-reader

./: Cargo.toml
src/: main.rs
src/phoronix/: article.rs  cli.rs  gui.rs  homepage.rs  linesplit.rs  mod.rs  phoronix.html
